[FEATURE] yarn trans

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -229,10 +229,11 @@
   "admin.AdminMenu.blogAdmin": "Blog",
   "admin.AdminMenu.blogCategory": "Category",
   "admin.AdminMenu.blogPosts": "Blog Posts",
-  "admin.AdminMenu.coinHistory": "Coin History",
-  "admin.AdminMenu.couponPlans": "Coupon Plans",
   "admin.AdminMenu.certificate": "Certificate",
   "admin.AdminMenu.certificateSetting": "Certificate Setting",
+  "admin.AdminMenu.certificateTemplate": "證書模板",
+  "admin.AdminMenu.coinHistory": "Coin History",
+  "admin.AdminMenu.couponPlans": "Coupon Plans",
   "admin.AdminMenu.creatorDisplayAdmin": "Instructor Wall",
   "admin.AdminMenu.creatorDisplayCategory": "Category",
   "admin.AdminMenu.creatorDisplayManagement": "Instructor Wall",
@@ -289,6 +290,7 @@
   "appointment.AppointmentPeriodCard.addToCalendar": "加入行事曆",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "已於 {time} 取消預約",
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已預約你的「{title}」",
+  "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "進入會議",
   "appointment.event.appointmentFailed": "Appointment Failed",
   "appointment.event.appointmentSuccessfully": "Appointment Successfully",
@@ -376,6 +378,9 @@
   "appointmentMessages.*.appointmentIssueAndResult": "提問紀錄單",
   "appointmentMessages.*.detail": "詳情",
   "appointmentMessages.*.fetchDataError": "讀取錯誤",
+  "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "訂單更新日期",
@@ -428,6 +433,11 @@
   "code.E_SEND_EMAIL": "Failed to send email",
   "code.E_USERNAME_EXISTS": "Username already exists",
   "code.SUCCESS": "Success",
+  "common.MetaProductDeletionBlock.back": "back",
+  "common.MetaProductDeletionBlock.delete": "delete",
+  "common.MetaProductDeletionBlock.deleteConfirmation": "{metaProduct}一經刪除即不可恢復，確定要刪除嗎？",
+  "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
+  "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
   "common.event.failedSave": "Save failed",
   "common.event.failedUpload": "Upload failed",
@@ -739,9 +749,12 @@
   "common.status.orderDeleted": "Deleted",
   "common.status.orderExpired": "Expired",
   "common.status.orderFailed": "Failed",
+  "common.status.orderPartialExpired": "部分過期",
   "common.status.orderPartialPaid": "Partial Payment",
   "common.status.orderPartialRefund": "Partial Refund",
+  "common.status.orderPaying": "付款中",
   "common.status.orderRefund": "Refund",
+  "common.status.orderRefunding": "退款中",
   "common.status.orderSuccess": "Success",
   "common.status.orderUnpaid": "Unpaid",
   "common.status.outdated": "Outdated",
@@ -752,6 +765,7 @@
   "common.status.published": "Published",
   "common.status.selling": "Selling",
   "common.status.soldOut": "Sold Out",
+  "common.status.unknown": "未知",
   "common.status.unpublished": "Unpublished",
   "common.status.visible": "Show",
   "common.text.cancelSubscriptionDate": "Cancelled on {date} unsubscribe",
@@ -1046,10 +1060,19 @@
   "craft.SectionSettings.vertical": "Vertical Arrangement",
   "craft.SectionSettings.verticalAlign": "Vertical Align",
   "craft.SizeStyleInput.height": "Height",
+  "craft.SpaceStyleInput.bottom": "Bottom",
+  "craft.SpaceStyleInput.left": "Left",
+  "craft.SpaceStyleInput.margin": "Margin",
+  "craft.SpaceStyleInput.padding": "Padding",
+  "craft.SpaceStyleInput.right": "Right",
+  "craft.SpaceStyleInput.spacing": "Spacing",
+  "craft.SpaceStyleInput.top": "Top",
   "craft.TextStyledInput.margin": "Margin",
   "craft.TitleSettings.titleContent": "Title Content",
   "craft.inputs.border.none": "No border",
   "craft.inputs.border.solid": "Solid line",
+  "craft.inputs.margin": "外距",
+  "craft.inputs.padding": "內距",
   "craft.label.actionSetting": "Action Setting",
   "craft.label.activity": "Activity",
   "craft.label.activityBlock": "Activity Block",
@@ -1148,13 +1171,6 @@
   "craft.settings.responsiveSelector.desktop": "Desktop",
   "craft.settings.responsiveSelector.mobile": "Mobile",
   "craft.settings.responsiveSelector.tablet": "Tablet",
-  "craft.SpaceStyleInput.spacing": "Spacing",
-  "craft.SpaceStyleInput.margin": "Margin",
-  "craft.SpaceStyleInput.padding": "Padding",
-  "craft.SpaceStyleInput.top": "Top",
-  "craft.SpaceStyleInput.right": "Right",
-  "craft.SpaceStyleInput.bottom": "Bottom",
-  "craft.SpaceStyleInput.left": "Left",
   "craft.text.chooseCategories": "Choose Categories",
   "craft.text.chooseTags": "Choose Tags",
   "craft.text.deletePageConfirmation": "Once a page is deleted, it cannot be recovered. Are you sure you want to delete it?",
@@ -1251,6 +1267,7 @@
   "form.PermissionGroup.CONTRACT_VALUE_VIEW_NORMAL": "檢視自己建立的合約",
   "form.PermissionGroup.COUPON_CODE_EXPORT": "匯出折扣碼",
   "form.PermissionGroup.COUPON_PLAN_ADMIN": "所有折價方案功能",
+  "form.PermissionGroup.COUPON_PLAN_NORMAL": "個人折價方案功能",
   "form.PermissionGroup.COUPON_PLAN_READ": "查看折價方案",
   "form.PermissionGroup.COUPON_PLAN_WRITE": "編寫折價方案",
   "form.PermissionGroup.CRAFT_MENU_ADMIN": "頁面模組選單",
@@ -1342,6 +1359,7 @@
   "form.PermissionGroup.VIEW_ALL_MEMBER_NOTE": "查看所有聯絡紀錄",
   "form.PermissionGroup.VOUCHER_CODE_EXPORT": "匯出兌換碼",
   "form.PermissionGroup.VOUCHER_PLAN_ADMIN": "所有兌換方案功能",
+  "form.PermissionGroup.VOUCHER_PLAN_NORMAL": "個人兌換方案功能",
   "form.PermissionGroup.VOUCHER_PLAN_READ": "查看兌換方案",
   "form.PermissionGroup.VOUCHER_PLAN_WRITE": "編寫兌換方案",
   "form.PermissionInput.activity": "活動",
@@ -1366,6 +1384,15 @@
   "form.PermissionInput.salesManagement": "業務管理",
   "form.PermissionInput.task": "待辦管理",
   "form.PermissionInput.voucher": "兌換方案",
+  "hooks.data.activity": "活動",
+  "hooks.data.certificate": "證書",
+  "hooks.data.merchandise": "商品",
+  "hooks.data.podcastAlbum": "專輯",
+  "hooks.data.podcastProgram": "廣播",
+  "hooks.data.post": "文章",
+  "hooks.data.program": "課程",
+  "hooks.data.programPackage": "課程組合",
+  "hooks.data.project": "專案",
   "member.label.abstract": "Abstract",
   "member.label.assign": "Assign",
   "member.label.attachment": "Call Attachment",
@@ -1589,50 +1616,105 @@
   "order.text.modifyOrderStatusDescription": "This operation only changes the status display and controls the user's authority. For actual refund or amount change, please go to the Jinliu platform to operate.",
   "order.ui.modifyOrderStatus": "Change Order Status",
   "page.*.all": "全部",
+  "page.*.available": "可使用",
+  "page.*.basicSettings": "基本設定",
+  "page.*.cancel": "取消",
+  "page.*.certificateNumber": "證書編號",
+  "page.*.certificateSetting": "證書設定",
   "page.*.chooseMember": "選擇會員",
+  "page.*.couponPlans": "折價方案",
+  "page.*.create": "建立",
+  "page.*.createCouponPlan": "建立折價方案",
+  "page.*.createVoucherPlan": "建立兌換方案",
   "page.*.date": "日期",
+  "page.*.day": "日",
+  "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
+  "page.*.deliveryDate": "發送日",
   "page.*.edit": "Edit",
+  "page.*.editCouponPlan": "編輯折價方案",
+  "page.*.eligibilityList": "資格名單",
   "page.*.enrolledMember": "擁有權益的會員",
+  "page.*.expiryDate": "到期日",
   "page.*.fetchDataError": "讀取錯誤",
+  "page.*.hasExpirationDate": "有效期",
+  "page.*.hour": "小時",
+  "page.*.import": "匯入",
   "page.*.member": "會員",
   "page.*.memberEmail": "Email",
   "page.*.memberName": "姓名",
+  "page.*.month": "月",
+  "page.*.noExpirationDate": "無效期",
+  "page.*.notYet": "未啟用",
+  "page.*.preview": "預覽",
   "page.*.program": "課程",
   "page.*.programContentSectionTitle": "章節名稱",
   "page.*.programContentTitle": "單元名稱",
   "page.*.programPackage": "課程組合",
   "page.*.programTitle": "課程名稱",
   "page.*.property": "自訂欄位",
+  "page.*.publishSettings": "發佈設定",
+  "page.*.published": "已發佈",
+  "page.*.reset": "重置",
+  "page.*.save": "儲存",
+  "page.*.search": "查詢",
   "page.*.selectedCategory": "指定分類",
   "page.*.selectedMember": "指定會員",
   "page.*.showMore": "顯示更多",
+  "page.*.successfullySaved": "儲存成功",
+  "page.*.title": "名稱",
+  "page.*.unavailable": "已失效",
+  "page.*.unpublished": "尚未發佈",
+  "page.*.upload": "上傳",
+  "page.*.voucherPlans": "兌換方案",
+  "page.*.week": "週",
+  "page.*.year": "年",
   "page.AppointmentPeriodCollectionAdminPage.allInstructors": "全部老師",
   "page.AppointmentPeriodCollectionAdminPage.dateRangeWarning": "請選擇時間區間一個月以內",
   "page.AppointmentPeriodCollectionAdminPage.emptyAppointment": "目前還沒有任何預約",
+  "page.CertificateAdminPage.certificateIntro": "證書介紹",
+  "page.CertificateAdminPage.deleteCertificateDangerText": "*已收到證書在刪除後仍可觀看。",
+  "page.CertificateBasicForm.CertificateCollectionTable": "證書樣板",
+  "page.CertificateBasicForm.certificateTemplateIsRequired": "Please select a template.",
+  "page.CertificateBasicForm.certificateTitle": "證書名稱",
+  "page.CertificateBasicForm.expirationDate": "證書效期",
+  "page.CertificateBasicForm.qualification": "學習時數",
+  "page.CertificateCollectionPage.createCertificate": "新增證書",
+  "page.CertificateEligibilityListBlock.Permanent": "永久有效",
+  "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
+  "page.CertificateEligibilityListBlock.revoke": "撤銷",
+  "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
+  "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
+  "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
+  "page.CertificatePublishAdminBlock.unPublishedCertificateText": "你的證書未發佈，此證書並不會顯示在前台。",
+  "page.CertificateSelector.selectTemplate": "select template",
+  "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
+  "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
+  "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
+  "page.ProgramPackageProcessBlock.instructorName": "講師名稱",
+  "page.ProgramPackageProcessBlock.minutes": "分鐘數",
   "page.ProgramPackageProcessBlock.programPackageCategories": "課程組合分類",
   "page.ProgramPackageProcessBlock.programPackageTitle": "課程組合名稱",
   "page.ProgramPackageProcessBlock.rangePickText": "計算此日期區間的學習狀況",
   "page.ProgramPackageProcessBlock.selectedPackageCategory": "指定組合分類",
+  "page.ProgramPackageProcessBlock.selectedProgramPackage": "指定課程組合",
   "page.ProgramProcessBlock.allMembers": "全部會員",
   "page.ProgramProcessBlock.allPrograms": "全部課程",
   "page.ProgramProcessBlock.categories": "課程分類",
   "page.ProgramProcessBlock.chooseProgram": "選擇課程",
   "page.ProgramProcessBlock.chooseProgramCategory": "選擇課程分類",
-  "page.ProgramProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramProcessBlock.chooseProperty": "選擇欄位",
   "page.ProgramProcessBlock.containKeyword": "關鍵字包含",
   "page.ProgramProcessBlock.exercisePassedAt": "測驗通過時間",
   "page.ProgramProcessBlock.exerciseScores": "測驗分數",
   "page.ProgramProcessBlock.exportProgramProgress": "匯出學習進度",
   "page.ProgramProcessBlock.firstWatchedAt": "初次觀看時間",
-  "page.ProgramProcessBlock.instructorName": "講師名稱",
   "page.ProgramProcessBlock.lastUpdatedAtText": "計算累計到此日期的進度",
   "page.ProgramProcessBlock.lastWatchedAt": "最後觀看時間",
   "page.ProgramProcessBlock.learningDuration": "學習時數",
   "page.ProgramProcessBlock.learningProgress": "學習進度",
-  "page.ProgramProcessBlock.minutes": "分鐘數",
   "page.ProgramProcessBlock.practices": "作業",
   "page.ProgramProcessBlock.programContentDuration": "單元時長(分)",
   "page.ProgramProcessBlock.programContentType": "單元類型",
@@ -1641,7 +1723,39 @@
   "page.ProgramProcessBlock.watchedDuration": "學習時間(分)",
   "page.ProgramProcessBlock.watchedPercentage": "學習進度",
   "page.ProgramProgressCollectionAdminPage.programProgress": "學習進度",
-  "page.selectedProgramPackage": "指定課程組合",
+  "page.ProjectAdminPage.settings": "專案設定",
+  "page.ProjectFundingPage.projectTitle": "專案名稱",
+  "page.ProjectFundingPage.sponsor": "發起者",
+  "page.ProjectFundingPage.unnamedProject": "未命名專案",
+  "page.ProjectPreOrderPage.projectTitle": "專案名稱",
+  "page.ProjectPreOrderPage.sponsor": "發起者",
+  "page.ProjectPreOrderPage.unnamedProject": "未命名專案",
+  "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
+  "page.VoucherPlanCollectionBlock.edit": "編輯",
+  "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
+  "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
+  "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
+  "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
+  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
+  "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
+  "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
+  "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
+  "page.salesLeadDeliveryPage.deliverSalesLead": "派發名單",
+  "page.salesLeadDeliveryPage.deliverSuccessfully": "派發名單成功",
+  "page.salesLeadDeliveryPage.deliveredCount": "已派發 {count} 筆名單",
+  "page.salesLeadDeliveryPage.delivering": "派發名單中",
+  "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
+  "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
+  "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
+  "page.salesLeadDeliveryPage.field": "領域",
+  "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
+  "page.salesLeadDeliveryPage.nextStep": "下一步",
+  "page.salesLeadDeliveryPage.originalManager": "原承辦人",
+  "page.salesLeadDeliveryPage.salesLeadDelivery": "名單派發",
+  "page.salesLeadDeliveryPage.starRange": "星等",
+  "page.salesLeadDeliveryPage.starRangeIsNull": "沒有星等的人",
   "pageProgramProgressCollectionAdminPage.exerciseFailed": "Failed",
   "pageProgramProgressCollectionAdminPage.exercisePassed": "Passed",
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Exam Status",
@@ -1727,6 +1841,11 @@
   "podcastAlbum.ui.sortPodcastProgram": "Sort Audio",
   "practice.text.emptyPractice": "There are no assignments yet",
   "practice.text.searchPractice": "Search by title or student name",
+  "program.DisplayModeSelector.conceal": "隱藏",
+  "program.DisplayModeSelector.loginToTrial": "登入試看",
+  "program.DisplayModeSelector.payToWatch": "付費觀看",
+  "program.DisplayModeSelector.trial": "試看",
+  "program.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "program.ProgramCollectionSelector.addItem": "Add item",
   "program.ProgramCollectionSelector.choiceData": "Choice Data",
   "program.ProgramCollectionSelector.currentPrice": "By product price",
@@ -1741,6 +1860,7 @@
   "program.ProgramCollectionSelector.sort": "Sort by",
   "program.ProgramCollectionSelector.sortAsc": "Positive order",
   "program.ProgramCollectionSelector.sortDesc": "Reverse order",
+  "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
@@ -1877,6 +1997,9 @@
   "program.ui.uploadVideo": "Upload Video",
   "program.ui.uploadedCaptions": "Uploaded Captions",
   "programPackage.ProgramPackageBasicFrom.tag": "標籤",
+  "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
+  "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
+  "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
   "programPackage.label.availableForLimitTime": "Available for viewing {amount} {unit}",
   "programPackage.label.delete": "Delete Course Package",
   "programPackage.label.generalSetting": "General Setting",
@@ -1920,6 +2043,7 @@
   "project.*.sortProjectPlan": "Project Sort",
   "project.*.sponsor": "Sponsor",
   "project.*.unnamedProject": "Unnamed Project",
+  "project.ProjectAdminPage.projectIntroduction": "專案介紹",
   "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "Project Deliverables",
   "project.ProjectPlanCard.notSale": "已停售",
@@ -2012,6 +2136,7 @@
   "promotion.ui.sendPoint": "Send Point",
   "promotion.ui.useNow": "Use",
   "sale.SaleCollectionAdminCard.cancel": "Cancel",
+  "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.equity": "Equity",
   "sale.SaleCollectionAdminCard.open": "Open",
   "sale.SaleCollectionAdminCard.openEquity": "Open Equity",
@@ -2064,6 +2189,30 @@
   "upload.event.uploading": "Uploading",
   "upload.label.retry": "Retry",
   "upload.label.uploadFile": "Upload File",
+  "voucher.*.cancel": "取消",
+  "voucher.*.confirm": "確定",
+  "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
+  "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
+  "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
+  "voucher.VoucherPlanAdminModal.endedAt": "結束時間",
+  "voucher.VoucherPlanAdminModal.errorExchangeItems": "至少選一個兌換項目",
+  "voucher.VoucherPlanAdminModal.errorExchangeItemsAmount": "數量至少為 1",
+  "voucher.VoucherPlanAdminModal.errorVoucherCodes": "至少一組兌換碼",
+  "voucher.VoucherPlanAdminModal.exchangeItems": "兌換項目",
+  "voucher.VoucherPlanAdminModal.exchangeItemsAmount": "兌換項目數量",
+  "voucher.VoucherPlanAdminModal.isSaleable": "可銷售（每份）",
+  "voucher.VoucherPlanAdminModal.isTransferable": "允許用戶自行轉贈",
+  "voucher.VoucherPlanAdminModal.optional": "非必填",
+  "voucher.VoucherPlanAdminModal.startedAt": "開始時間",
+  "voucher.VoucherPlanAdminModal.successfullyCreated": "建立成功",
+  "voucher.VoucherPlanAdminModal.successfullySaved": "儲存成功",
+  "voucher.VoucherPlanAdminModal.voucherCodes": "兌換碼",
+  "voucher.VoucherPlanAdminModal.voucherPlanTitle": "兌換方案名稱",
+  "voucher.VoucherPlanCard.exchangeItemsNumber": "可兌換 {number} 個項目",
+  "voucher.VoucherPlanCard.exchangedCount": "{exchanged}/{total} 張",
+  "voucher.VoucherPlanCard.forever": "無使用期限",
+  "voucher.VoucherPlanCard.fromNow": "即日起",
   "voucher.status.available": "Available",
   "voucher.status.expired": "Expired",
   "voucher.status.redeemable": "Redeemable",
