--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -231,6 +231,7 @@
   "admin.AdminMenu.blogPosts": "Quản lý bài viết",
   "admin.AdminMenu.certificate": "Quản lý chứng chỉ",
   "admin.AdminMenu.certificateSetting": "Cài đặt chứng chỉ",
+  "admin.AdminMenu.certificateTemplate": "證書模板",
   "admin.AdminMenu.coinHistory": "Mã thông báo",
   "admin.AdminMenu.couponPlans": "Kế hoạch giảm giá",
   "admin.AdminMenu.creatorDisplayAdmin": "Giảng viên tường",
@@ -289,6 +290,7 @@
   "appointment.AppointmentPeriodCard.addToCalendar": "Tham gia lịch",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "Trong {time} Hủy cuộc hẹn",
   "appointment.AppointmentPeriodCard.appointmentText": "{name} Bạn đã nộp đơn cho bạn'{title}'",
+  "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "Vào cuộc họp",
   "appointment.event.appointmentFailed": "Không hẹn gặp",
   "appointment.event.appointmentSuccessfully": "Cuộc hẹn thành công",
@@ -376,6 +378,9 @@
   "appointmentMessages.*.appointmentIssueAndResult": "Danh sách hồ sơ câu hỏi",
   "appointmentMessages.*.detail": "Chi tiết",
   "appointmentMessages.*.fetchDataError": "Đọc lỗi",
+  "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "Lý do hủy bỏ",
   "appointmentMessages.AppointmentDetailModal.email": "hộp thư",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "Ngày cập nhật ngày",
@@ -428,6 +433,11 @@
   "code.E_SEND_EMAIL": " Không gửi được email ",
   "code.E_USERNAME_EXISTS": " Tên người dùng đã tồn tại ",
   "code.SUCCESS": " Thành công ",
+  "common.MetaProductDeletionBlock.back": "back",
+  "common.MetaProductDeletionBlock.delete": "delete",
+  "common.MetaProductDeletionBlock.deleteConfirmation": "{metaProduct}一經刪除即不可恢復，確定要刪除嗎？",
+  "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
+  "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
   "common.event.cancelSubscriptionSuccess": " Hủy đăng ký ",
   "common.event.failedSave": " Lưu không thành công ",
   "common.event.failedUpload": " Tải lên không thành công ",
@@ -739,9 +749,12 @@
   "common.status.orderDeleted": " Đã xóa ",
   "common.status.orderExpired": " Đã hết hạn ",
   "common.status.orderFailed": "Không thành công",
+  "common.status.orderPartialExpired": "部分過期",
   "common.status.orderPartialPaid": " Thanh toán một phần ",
   "common.status.orderPartialRefund": " Hoàn lại một phần ",
+  "common.status.orderPaying": "付款中",
   "common.status.orderRefund": "Hoàn lại tiền",
+  "common.status.orderRefunding": "退款中",
   "common.status.orderSuccess": "Thành công",
   "common.status.orderUnpaid": "Chưa thanh toán",
   "common.status.outdated": "Đã lỗi thời ",
@@ -752,6 +765,7 @@
   "common.status.published": "Đã xuất bản",
   "common.status.selling": "Đang bán",
   "common.status.soldOut": "Hết hàng",
+  "common.status.unknown": "未知",
   "common.status.unpublished": "Chưa được xuất bản",
   "common.status.visible": "buổi bieu diễn",
   "common.text.cancelSubscriptionDate": "Đã hủy vào {date} hủy đăng ký ",
@@ -1046,10 +1060,19 @@
   "craft.SectionSettings.vertical": " Sắp xếp theo chiều dọc ",
   "craft.SectionSettings.verticalAlign": " Căn chỉnh theo chiều dọc ",
   "craft.SizeStyleInput.height": " Chiều cao ",
+  "craft.SpaceStyleInput.bottom": "đáy",
+  "craft.SpaceStyleInput.left": "bên trái",
+  "craft.SpaceStyleInput.margin": " Ký quỹ ",
+  "craft.SpaceStyleInput.padding": "Đệm ",
+  "craft.SpaceStyleInput.right": "bên phải",
+  "craft.SpaceStyleInput.spacing": "khoảng cách",
+  "craft.SpaceStyleInput.top": "đứng đầu",
   "craft.TextStyledInput.margin": " Ký quỹ ",
   "craft.TitleSettings.titleContent": " Nội dung Tiêu đề ",
   "craft.inputs.border.none": "Không có đường viền ",
   "craft.inputs.border.solid": " Đường liền nét ",
+  "craft.inputs.margin": "外距",
+  "craft.inputs.padding": "內距",
   "craft.label.actionSetting": " Cài đặt hành động ",
   "craft.label.activity": " Hoạt động ",
   "craft.label.activityBlock": " Khối hoạt động ",
@@ -1148,13 +1171,6 @@
   "craft.settings.responsiveSelector.desktop": " Máy tính để bàn ",
   "craft.settings.responsiveSelector.mobile": " Di động ",
   "craft.settings.responsiveSelector.tablet": " Máy tính bảng ",
-  "craft.SpaceStyleInput.spacing": "khoảng cách",
-  "craft.SpaceStyleInput.margin": " Ký quỹ ",
-  "craft.SpaceStyleInput.padding": "Đệm ",
-  "craft.SpaceStyleInput.top": "đứng đầu",
-  "craft.SpaceStyleInput.right": "bên phải",
-  "craft.SpaceStyleInput.bottom": "đáy",
-  "craft.SpaceStyleInput.left": "bên trái",
   "craft.text.chooseCategories": " Chọn danh mục ",
   "craft.text.chooseTags": " Chọn thẻ ",
   "craft.text.deletePageConfirmation": " Khi một trang bị xóa, nó sẽ không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
@@ -1251,6 +1267,7 @@
   "form.PermissionGroup.CONTRACT_VALUE_VIEW_NORMAL": "Kiểm tra hợp đồng bạn đã thiết lập",
   "form.PermissionGroup.COUPON_CODE_EXPORT": "Xuất mã giảm giá",
   "form.PermissionGroup.COUPON_PLAN_ADMIN": "Tất cả các chức năng chương trình giảm giá",
+  "form.PermissionGroup.COUPON_PLAN_NORMAL": "個人折價方案功能",
   "form.PermissionGroup.COUPON_PLAN_READ": "Xem chương trình giảm giá",
   "form.PermissionGroup.COUPON_PLAN_WRITE": "Viết sơ đồ giảm giá",
   "form.PermissionGroup.CRAFT_MENU_ADMIN": "Menu mô -đun trang",
@@ -1342,6 +1359,7 @@
   "form.PermissionGroup.VIEW_ALL_MEMBER_NOTE": "Xem tất cả các hồ sơ liên hệ",
   "form.PermissionGroup.VOUCHER_CODE_EXPORT": "Xuất mã trao đổi",
   "form.PermissionGroup.VOUCHER_PLAN_ADMIN": "Tất cả các chức năng sơ đồ trao đổi",
+  "form.PermissionGroup.VOUCHER_PLAN_NORMAL": "個人兌換方案功能",
   "form.PermissionGroup.VOUCHER_PLAN_READ": "Xem sơ đồ trao đổi",
   "form.PermissionGroup.VOUCHER_PLAN_WRITE": "Viết sơ đồ trao đổi",
   "form.PermissionInput.activity": "Hoạt động",
@@ -1366,6 +1384,15 @@
   "form.PermissionInput.salesManagement": "Quản lý kinh doanh",
   "form.PermissionInput.task": "Được quản lý",
   "form.PermissionInput.voucher": "Kế hoạch trao đổi",
+  "hooks.data.activity": "活動",
+  "hooks.data.certificate": "證書",
+  "hooks.data.merchandise": "商品",
+  "hooks.data.podcastAlbum": "專輯",
+  "hooks.data.podcastProgram": "廣播",
+  "hooks.data.post": "文章",
+  "hooks.data.program": "課程",
+  "hooks.data.programPackage": "課程組合",
+  "hooks.data.project": "專案",
   "member.label.abstract": " Tóm tắt ",
   "member.label.assign": " Chỉ định ",
   "member.label.attachment": " Tệp đính kèm cuộc gọi ",
@@ -1589,50 +1616,105 @@
   "order.text.modifyOrderStatusDescription": " Thao tác này chỉ thay đổi hiển thị trạng thái và kiểm soát quyền hạn của người dùng. Để hoàn lại tiền hoặc thay đổi số tiền thực tế, vui lòng chuyển đến nền tảng Jinliu để hoạt động. ",
   "order.ui.modifyOrderStatus": " Thay đổi Trạng thái Đơn hàng ",
   "page.*.all": "tất cả các",
+  "page.*.available": "可使用",
+  "page.*.basicSettings": "基本設定",
+  "page.*.cancel": "取消",
+  "page.*.certificateNumber": "證書編號",
+  "page.*.certificateSetting": "證書設定",
   "page.*.chooseMember": "Chọn một thành viên",
+  "page.*.couponPlans": "折價方案",
+  "page.*.create": "建立",
+  "page.*.createCouponPlan": "建立折價方案",
+  "page.*.createVoucherPlan": "建立兌換方案",
   "page.*.date": "ngày",
+  "page.*.day": "日",
+  "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
+  "page.*.deliveryDate": "發送日",
   "page.*.edit": " Chỉnh sửa ",
+  "page.*.editCouponPlan": "編輯折價方案",
+  "page.*.eligibilityList": "資格名單",
   "page.*.enrolledMember": "Thành viên với vốn chủ sở hữu",
+  "page.*.expiryDate": "到期日",
   "page.*.fetchDataError": "Đọc lỗi",
+  "page.*.hasExpirationDate": "有效期",
+  "page.*.hour": "小時",
+  "page.*.import": "匯入",
   "page.*.member": "thành viên",
   "page.*.memberEmail": "Email",
   "page.*.memberName": "Tên",
+  "page.*.month": "月",
+  "page.*.noExpirationDate": "無效期",
+  "page.*.notYet": "未啟用",
+  "page.*.preview": "預覽",
   "page.*.program": "khóa học",
   "page.*.programContentSectionTitle": "Tên chương",
   "page.*.programContentTitle": "Tên bài",
   "page.*.programPackage": "Chương trình giảng dạy",
   "page.*.programTitle": "Tên khóa học",
   "page.*.property": "Trường tự lập",
+  "page.*.publishSettings": "發佈設定",
+  "page.*.published": "已發佈",
+  "page.*.reset": "重置",
+  "page.*.save": "儲存",
+  "page.*.search": "查詢",
   "page.*.selectedCategory": "Phân loại được chỉ định",
   "page.*.selectedMember": "Thành viên được chỉ định",
   "page.*.showMore": "Hiển thị nhiều hơn",
+  "page.*.successfullySaved": "儲存成功",
+  "page.*.title": "名稱",
+  "page.*.unavailable": "已失效",
+  "page.*.unpublished": "尚未發佈",
+  "page.*.upload": "上傳",
+  "page.*.voucherPlans": "兌換方案",
+  "page.*.week": "週",
+  "page.*.year": "年",
   "page.AppointmentPeriodCollectionAdminPage.allInstructors": "Tất cả các giáo viên",
   "page.AppointmentPeriodCollectionAdminPage.dateRangeWarning": "Vui lòng chọn khoảng thời gian trong vòng một tháng",
   "page.AppointmentPeriodCollectionAdminPage.emptyAppointment": "Chưa có cuộc hẹn",
+  "page.CertificateAdminPage.certificateIntro": "證書介紹",
+  "page.CertificateAdminPage.deleteCertificateDangerText": "*已收到證書在刪除後仍可觀看。",
+  "page.CertificateBasicForm.CertificateCollectionTable": "證書樣板",
+  "page.CertificateBasicForm.certificateTemplateIsRequired": "Please select a template.",
+  "page.CertificateBasicForm.certificateTitle": "證書名稱",
+  "page.CertificateBasicForm.expirationDate": "證書效期",
+  "page.CertificateBasicForm.qualification": "學習時數",
+  "page.CertificateCollectionPage.createCertificate": "新增證書",
+  "page.CertificateEligibilityListBlock.Permanent": "永久有效",
+  "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
+  "page.CertificateEligibilityListBlock.revoke": "撤銷",
+  "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
+  "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
+  "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
+  "page.CertificatePublishAdminBlock.unPublishedCertificateText": "你的證書未發佈，此證書並不會顯示在前台。",
+  "page.CertificateSelector.selectTemplate": "select template",
+  "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
+  "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Tất cả các khóa học",
+  "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Chọn Phân loại kết hợp khóa học",
+  "page.ProgramPackageProcessBlock.instructorName": "講師名稱",
+  "page.ProgramPackageProcessBlock.minutes": "分鐘數",
   "page.ProgramPackageProcessBlock.programPackageCategories": "Phân loại kết hợp khóa học",
   "page.ProgramPackageProcessBlock.programPackageTitle": "Tên kết hợp khóa học",
   "page.ProgramPackageProcessBlock.rangePickText": "Tính trạng thái học tập của khoảng thời gian này",
   "page.ProgramPackageProcessBlock.selectedPackageCategory": "Chỉ định phân loại kết hợp",
+  "page.ProgramPackageProcessBlock.selectedProgramPackage": "指定課程組合",
   "page.ProgramProcessBlock.allMembers": "Tất cả thành viên",
   "page.ProgramProcessBlock.allPrograms": "Tất cả các khóa học",
   "page.ProgramProcessBlock.categories": "Các loại khóa học",
   "page.ProgramProcessBlock.chooseProgram": "Chọn một khóa học",
   "page.ProgramProcessBlock.chooseProgramCategory": "Chọn phân loại khóa học",
-  "page.ProgramProcessBlock.chooseProgramPackage": "Chọn một khóa học",
   "page.ProgramProcessBlock.chooseProperty": "Trường lựa chọn",
   "page.ProgramProcessBlock.containKeyword": "Từ khóa bao gồm",
   "page.ProgramProcessBlock.exercisePassedAt": "Thời gian kiểm tra",
   "page.ProgramProcessBlock.exerciseScores": "Điểm kiểm tra",
   "page.ProgramProcessBlock.exportProgramProgress": "Xuất khẩu tiến độ học tập",
   "page.ProgramProcessBlock.firstWatchedAt": "Lần đầu tiên xem thời gian",
-  "page.ProgramProcessBlock.instructorName": "Tên giảng viên",
   "page.ProgramProcessBlock.lastUpdatedAtText": "Tính tiến trình của ngày này",
   "page.ProgramProcessBlock.lastWatchedAt": "Thời gian xem lần cuối",
   "page.ProgramProcessBlock.learningDuration": "Thơi gian học",
   "page.ProgramProcessBlock.learningProgress": "Tiến trình học tập",
-  "page.ProgramProcessBlock.minutes": "Số phút",
   "page.ProgramProcessBlock.practices": "công việc",
   "page.ProgramProcessBlock.programContentDuration": "Thời lượng đơn vị (chia)",
   "page.ProgramProcessBlock.programContentType": "Loại đơn vị",
@@ -1641,7 +1723,39 @@
   "page.ProgramProcessBlock.watchedDuration": "Thời gian học tập (phân chia)",
   "page.ProgramProcessBlock.watchedPercentage": "Tiến trình học tập",
   "page.ProgramProgressCollectionAdminPage.programProgress": "Tiến trình học tập",
-  "page.selectedProgramPackage": "Chỉ định kết hợp khóa học",
+  "page.ProjectAdminPage.settings": "專案設定",
+  "page.ProjectFundingPage.projectTitle": "專案名稱",
+  "page.ProjectFundingPage.sponsor": "發起者",
+  "page.ProjectFundingPage.unnamedProject": "未命名專案",
+  "page.ProjectPreOrderPage.projectTitle": "專案名稱",
+  "page.ProjectPreOrderPage.sponsor": "發起者",
+  "page.ProjectPreOrderPage.unnamedProject": "未命名專案",
+  "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
+  "page.VoucherPlanCollectionBlock.edit": "編輯",
+  "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
+  "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
+  "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
+  "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
+  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
+  "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
+  "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
+  "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
+  "page.salesLeadDeliveryPage.deliverSalesLead": "派發名單",
+  "page.salesLeadDeliveryPage.deliverSuccessfully": "派發名單成功",
+  "page.salesLeadDeliveryPage.deliveredCount": "已派發 {count} 筆名單",
+  "page.salesLeadDeliveryPage.delivering": "派發名單中",
+  "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
+  "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
+  "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
+  "page.salesLeadDeliveryPage.field": "領域",
+  "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
+  "page.salesLeadDeliveryPage.nextStep": "下一步",
+  "page.salesLeadDeliveryPage.originalManager": "原承辦人",
+  "page.salesLeadDeliveryPage.salesLeadDelivery": "名單派發",
+  "page.salesLeadDeliveryPage.starRange": "星等",
+  "page.salesLeadDeliveryPage.starRangeIsNull": "沒有星等的人",
   "pageProgramProgressCollectionAdminPage.exerciseFailed": "Không thành công ",
   "pageProgramProgressCollectionAdminPage.exercisePassed": " Đạt ",
   "pageProgramProgressCollectionAdminPage.exerciseStatus": " Trạng thái kỳ thi ",
@@ -1727,6 +1841,11 @@
   "podcastAlbum.ui.sortPodcastProgram": " Sắp xếp âm thanh ",
   "practice.text.emptyPractice": " Chưa có bài tập nào ",
   "practice.text.searchPractice": " Tìm kiếm theo chức danh hoặc tên sinh viên ",
+  "program.DisplayModeSelector.conceal": "隱藏",
+  "program.DisplayModeSelector.loginToTrial": "登入試看",
+  "program.DisplayModeSelector.payToWatch": "付費觀看",
+  "program.DisplayModeSelector.trial": "試看",
+  "program.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "program.ProgramCollectionSelector.addItem": " Thêm mục ",
   "program.ProgramCollectionSelector.choiceData": " Dữ liệu lựa chọn ",
   "program.ProgramCollectionSelector.currentPrice": " Theo giá sản phẩm ",
@@ -1741,6 +1860,7 @@
   "program.ProgramCollectionSelector.sort": " Sắp xếp theo ",
   "program.ProgramCollectionSelector.sortAsc": " Thứ tự tích cực ",
   "program.ProgramCollectionSelector.sortDesc": " Đảo ngược thứ tự ",
+  "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "Tất cả các khóa học",
   "program.event.editIssueFailed": "Chỉnh sửa sự cố không thành công",
   "program.label.allProgram": "Tất cả chương trình",
@@ -1877,6 +1997,9 @@
   "program.ui.uploadVideo": "Tải lên Video",
   "program.ui.uploadedCaptions": " Phụ đề đã Tải lên ",
   "programPackage.ProgramPackageBasicFrom.tag": "Nhãn mác",
+  "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
+  "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
+  "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
   "programPackage.label.availableForLimitTime": " Có sẵn để xem {số tiền} {đơn vị} ",
   "programPackage.label.delete": " Xóa Gói Khóa học ",
   "programPackage.label.generalSetting": " Cài đặt Chung ",
@@ -1920,6 +2043,7 @@
   "project.*.sortProjectPlan": " Sắp xếp dự án ",
   "project.*.sponsor": "Người khởi xướng",
   "project.*.unnamedProject": "Dự án không tên",
+  "project.ProjectAdminPage.projectIntroduction": "專案介紹",
   "project.ProjectBasicForm.tag": "Nhãn mác",
   "project.ProjectPlanAdminModal.deliverables": " Project Deliverables ",
   "project.ProjectPlanCard.notSale": "Đã bán",
@@ -2012,6 +2136,7 @@
   "promotion.ui.sendPoint": " Điểm gửi ",
   "promotion.ui.useNow": "Sử dụng",
   "sale.SaleCollectionAdminCard.cancel": " Hủy ",
+  "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.equity": " Vốn chủ sở hữu ",
   "sale.SaleCollectionAdminCard.open": " Mở ",
   "sale.SaleCollectionAdminCard.openEquity": " Open Equity ",
@@ -2064,6 +2189,30 @@
   "upload.event.uploading": "Đang tải lên",
   "upload.label.retry": "Thử lại",
   "upload.label.uploadFile": "Tải lên Tệp",
+  "voucher.*.cancel": "取消",
+  "voucher.*.confirm": "確定",
+  "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
+  "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
+  "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
+  "voucher.VoucherPlanAdminModal.endedAt": "結束時間",
+  "voucher.VoucherPlanAdminModal.errorExchangeItems": "至少選一個兌換項目",
+  "voucher.VoucherPlanAdminModal.errorExchangeItemsAmount": "數量至少為 1",
+  "voucher.VoucherPlanAdminModal.errorVoucherCodes": "至少一組兌換碼",
+  "voucher.VoucherPlanAdminModal.exchangeItems": "兌換項目",
+  "voucher.VoucherPlanAdminModal.exchangeItemsAmount": "兌換項目數量",
+  "voucher.VoucherPlanAdminModal.isSaleable": "可銷售（每份）",
+  "voucher.VoucherPlanAdminModal.isTransferable": "允許用戶自行轉贈",
+  "voucher.VoucherPlanAdminModal.optional": "非必填",
+  "voucher.VoucherPlanAdminModal.startedAt": "開始時間",
+  "voucher.VoucherPlanAdminModal.successfullyCreated": "建立成功",
+  "voucher.VoucherPlanAdminModal.successfullySaved": "儲存成功",
+  "voucher.VoucherPlanAdminModal.voucherCodes": "兌換碼",
+  "voucher.VoucherPlanAdminModal.voucherPlanTitle": "兌換方案名稱",
+  "voucher.VoucherPlanCard.exchangeItemsNumber": "可兌換 {number} 個項目",
+  "voucher.VoucherPlanCard.exchangedCount": "{exchanged}/{total} 張",
+  "voucher.VoucherPlanCard.forever": "無使用期限",
+  "voucher.VoucherPlanCard.fromNow": "即日起",
   "voucher.status.available": " Có sẵn ",
   "voucher.status.expired": " Đã hết hạn ",
   "voucher.status.redeemable": "Có thể đổi ",
