--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -231,6 +231,7 @@
   "admin.AdminMenu.blogPosts": "文章管理",
   "admin.AdminMenu.certificate": "證書管理",
   "admin.AdminMenu.certificateSetting": "證書設定",
+  "admin.AdminMenu.certificateTemplate": "證書模板",
   "admin.AdminMenu.coinHistory": "代幣紀錄",
   "admin.AdminMenu.couponPlans": "折價方案",
   "admin.AdminMenu.creatorDisplayAdmin": "講師牆",
@@ -289,6 +290,7 @@
   "appointment.AppointmentPeriodCard.addToCalendar": "加入行事曆",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "已於 {time} 取消預約",
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已預約你的「{title}」",
+  "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "進入會議",
   "appointment.event.appointmentFailed": "預約失敗",
   "appointment.event.appointmentSuccessfully": "預約成功",
@@ -376,6 +378,9 @@
   "appointmentMessages.*.appointmentIssueAndResult": "提問紀錄單",
   "appointmentMessages.*.detail": "詳情",
   "appointmentMessages.*.fetchDataError": "讀取錯誤",
+  "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "訂單更新日期",
@@ -428,6 +433,11 @@
   "code.E_SEND_EMAIL": "寄送信件失敗",
   "code.E_USERNAME_EXISTS": "使用者名稱已存在",
   "code.SUCCESS": "成功",
+  "common.MetaProductDeletionBlock.back": "返回",
+  "common.MetaProductDeletionBlock.delete": "刪除",
+  "common.MetaProductDeletionBlock.deleteConfirmation": "{metaProduct}一經刪除即不可恢復，確定要刪除嗎？",
+  "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
+  "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
   "common.event.cancelSubscriptionSuccess": "取消訂閱成功",
   "common.event.failedSave": "儲存失敗",
   "common.event.failedUpload": "上傳失敗",
@@ -739,9 +749,12 @@
   "common.status.orderDeleted": "已刪除",
   "common.status.orderExpired": "已失效",
   "common.status.orderFailed": "付款失敗",
+  "common.status.orderPartialExpired": "部分過期",
   "common.status.orderPartialPaid": "部分付款",
   "common.status.orderPartialRefund": "部分退款",
+  "common.status.orderPaying": "付款中",
   "common.status.orderRefund": "已退款",
+  "common.status.orderRefunding": "退款中",
   "common.status.orderSuccess": "已完成",
   "common.status.orderUnpaid": "待付款",
   "common.status.outdated": "已過期",
@@ -752,6 +765,7 @@
   "common.status.published": "已發佈",
   "common.status.selling": "販售中",
   "common.status.soldOut": "已售完",
+  "common.status.unknown": "未知",
   "common.status.unpublished": "尚未發佈",
   "common.status.visible": "顯示",
   "common.text.cancelSubscriptionDate": "已於 {date} 取消訂閱",
@@ -1046,10 +1060,19 @@
   "craft.SectionSettings.vertical": "垂直排列",
   "craft.SectionSettings.verticalAlign": "垂直對齊",
   "craft.SizeStyleInput.height": "高度",
+  "craft.SpaceStyleInput.bottom": "下",
+  "craft.SpaceStyleInput.left": "左",
+  "craft.SpaceStyleInput.margin": "外距",
+  "craft.SpaceStyleInput.padding": "內距",
+  "craft.SpaceStyleInput.right": "右",
+  "craft.SpaceStyleInput.spacing": "間距",
+  "craft.SpaceStyleInput.top": "上",
   "craft.TextStyledInput.margin": "外距",
   "craft.TitleSettings.titleContent": "標題內容",
   "craft.inputs.border.none": "無框線",
   "craft.inputs.border.solid": "實線",
+  "craft.inputs.margin": "外距",
+  "craft.inputs.padding": "內距",
   "craft.label.actionSetting": "行為設定",
   "craft.label.activity": "活動",
   "craft.label.activityBlock": "活動區塊",
@@ -1148,13 +1171,6 @@
   "craft.settings.responsiveSelector.desktop": "桌面",
   "craft.settings.responsiveSelector.mobile": "手機",
   "craft.settings.responsiveSelector.tablet": "平板",
-  "craft.SpaceStyleInput.spacing": "間距",
-  "craft.SpaceStyleInput.margin": "外距",
-  "craft.SpaceStyleInput.padding": "內距",
-  "craft.SpaceStyleInput.top": "上",
-  "craft.SpaceStyleInput.right": "右",
-  "craft.SpaceStyleInput.bottom": "下",
-  "craft.SpaceStyleInput.left": "左",
   "craft.text.chooseCategories": "選擇分類",
   "craft.text.chooseTags": "選擇標籤",
   "craft.text.deletePageConfirmation": "頁面一經刪除即不可恢復，確定要刪除嗎？",
@@ -1251,6 +1267,7 @@
   "form.PermissionGroup.CONTRACT_VALUE_VIEW_NORMAL": "檢視自己建立的合約",
   "form.PermissionGroup.COUPON_CODE_EXPORT": "匯出折扣碼",
   "form.PermissionGroup.COUPON_PLAN_ADMIN": "所有折價方案功能",
+  "form.PermissionGroup.COUPON_PLAN_NORMAL": "個人折價方案功能",
   "form.PermissionGroup.COUPON_PLAN_READ": "查看折價方案",
   "form.PermissionGroup.COUPON_PLAN_WRITE": "編寫折價方案",
   "form.PermissionGroup.CRAFT_MENU_ADMIN": "頁面模組選單",
@@ -1342,6 +1359,7 @@
   "form.PermissionGroup.VIEW_ALL_MEMBER_NOTE": "查看所有聯絡紀錄",
   "form.PermissionGroup.VOUCHER_CODE_EXPORT": "匯出兌換碼",
   "form.PermissionGroup.VOUCHER_PLAN_ADMIN": "所有兌換方案功能",
+  "form.PermissionGroup.VOUCHER_PLAN_NORMAL": "個人兌換方案功能",
   "form.PermissionGroup.VOUCHER_PLAN_READ": "查看兌換方案",
   "form.PermissionGroup.VOUCHER_PLAN_WRITE": "編寫兌換方案",
   "form.PermissionInput.activity": "活動",
@@ -1366,6 +1384,15 @@
   "form.PermissionInput.salesManagement": "業務管理",
   "form.PermissionInput.task": "待辦管理",
   "form.PermissionInput.voucher": "兌換方案",
+  "hooks.data.activity": "活動",
+  "hooks.data.certificate": "證書",
+  "hooks.data.merchandise": "商品",
+  "hooks.data.podcastAlbum": "專輯",
+  "hooks.data.podcastProgram": "廣播",
+  "hooks.data.post": "文章",
+  "hooks.data.program": "課程",
+  "hooks.data.programPackage": "課程組合",
+  "hooks.data.project": "專案",
   "member.label.abstract": "個人簡介",
   "member.label.assign": "指派",
   "member.label.attachment": "通話附件",
@@ -1422,7 +1449,6 @@
   "merchandise.label.basicSettings": "基本設定",
   "merchandise.label.comment": "備註",
   "merchandise.label.cover": "封面圖片",
-  "merchandise.label.currency": "幣值",
   "merchandise.label.customizedPhysical": "客製實體",
   "merchandise.label.customizedPhysicalMerchandise": "客製實體商品",
   "merchandise.label.customizedPhysicalTag": "客製實體",
@@ -1590,50 +1616,105 @@
   "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
   "order.ui.modifyOrderStatus": "變更訂單狀態",
   "page.*.all": "全部",
+  "page.*.available": "可使用",
+  "page.*.basicSettings": "基本設定",
+  "page.*.cancel": "取消",
+  "page.*.certificateNumber": "證書編號",
+  "page.*.certificateSetting": "證書設定",
   "page.*.chooseMember": "選擇會員",
+  "page.*.couponPlans": "折價方案",
+  "page.*.create": "建立",
+  "page.*.createCouponPlan": "建立折價方案",
+  "page.*.createVoucherPlan": "建立兌換方案",
   "page.*.date": "日期",
+  "page.*.day": "日",
+  "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
+  "page.*.deliveryDate": "發送日",
   "page.*.edit": "編輯",
+  "page.*.editCouponPlan": "編輯折價方案",
+  "page.*.eligibilityList": "資格名單",
   "page.*.enrolledMember": "擁有權益的會員",
+  "page.*.expiryDate": "到期日",
   "page.*.fetchDataError": "讀取錯誤",
+  "page.*.hasExpirationDate": "有效期",
+  "page.*.hour": "小時",
+  "page.*.import": "匯入",
   "page.*.member": "會員",
   "page.*.memberEmail": "Email",
   "page.*.memberName": "姓名",
+  "page.*.month": "月",
+  "page.*.noExpirationDate": "無效期",
+  "page.*.notYet": "未啟用",
+  "page.*.preview": "預覽",
   "page.*.program": "課程",
   "page.*.programContentSectionTitle": "章節名稱",
   "page.*.programContentTitle": "單元名稱",
   "page.*.programPackage": "課程組合",
   "page.*.programTitle": "課程名稱",
   "page.*.property": "自訂欄位",
+  "page.*.publishSettings": "發佈設定",
+  "page.*.published": "已發佈",
+  "page.*.reset": "重置",
+  "page.*.save": "儲存",
+  "page.*.search": "查詢",
   "page.*.selectedCategory": "指定分類",
   "page.*.selectedMember": "指定會員",
   "page.*.showMore": "顯示更多",
+  "page.*.successfullySaved": "儲存成功",
+  "page.*.title": "名稱",
+  "page.*.unavailable": "已失效",
+  "page.*.unpublished": "尚未發佈",
+  "page.*.upload": "上傳",
+  "page.*.voucherPlans": "兌換方案",
+  "page.*.week": "週",
+  "page.*.year": "年",
   "page.AppointmentPeriodCollectionAdminPage.allInstructors": "全部老師",
   "page.AppointmentPeriodCollectionAdminPage.dateRangeWarning": "請選擇時間區間一個月以內",
   "page.AppointmentPeriodCollectionAdminPage.emptyAppointment": "目前還沒有任何預約",
+  "page.CertificateAdminPage.certificateIntro": "證書介紹",
+  "page.CertificateAdminPage.deleteCertificateDangerText": "*已收到證書在刪除後仍可觀看。",
+  "page.CertificateBasicForm.CertificateCollectionTable": "證書樣板",
+  "page.CertificateBasicForm.certificateTemplateIsRequired": "Please select a template.",
+  "page.CertificateBasicForm.certificateTitle": "證書名稱",
+  "page.CertificateBasicForm.expirationDate": "證書效期",
+  "page.CertificateBasicForm.qualification": "學習時數",
+  "page.CertificateCollectionPage.createCertificate": "新增證書",
+  "page.CertificateEligibilityListBlock.Permanent": "永久有效",
+  "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
+  "page.CertificateEligibilityListBlock.revoke": "撤銷",
+  "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
+  "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
+  "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
+  "page.CertificatePublishAdminBlock.unPublishedCertificateText": "你的證書未發佈，此證書並不會顯示在前台。",
+  "page.CertificateSelector.selectTemplate": "select template",
+  "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
+  "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
+  "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
+  "page.ProgramPackageProcessBlock.instructorName": "講師名稱",
+  "page.ProgramPackageProcessBlock.minutes": "分鐘數",
   "page.ProgramPackageProcessBlock.programPackageCategories": "課程組合分類",
   "page.ProgramPackageProcessBlock.programPackageTitle": "課程組合名稱",
   "page.ProgramPackageProcessBlock.rangePickText": "計算此日期區間的學習狀況",
   "page.ProgramPackageProcessBlock.selectedPackageCategory": "指定組合分類",
+  "page.ProgramPackageProcessBlock.selectedProgramPackage": "指定課程組合",
   "page.ProgramProcessBlock.allMembers": "全部會員",
   "page.ProgramProcessBlock.allPrograms": "全部課程",
   "page.ProgramProcessBlock.categories": "課程分類",
   "page.ProgramProcessBlock.chooseProgram": "選擇課程",
   "page.ProgramProcessBlock.chooseProgramCategory": "選擇課程分類",
-  "page.ProgramProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramProcessBlock.chooseProperty": "選擇欄位",
   "page.ProgramProcessBlock.containKeyword": "關鍵字包含",
   "page.ProgramProcessBlock.exercisePassedAt": "測驗通過時間",
   "page.ProgramProcessBlock.exerciseScores": "測驗分數",
   "page.ProgramProcessBlock.exportProgramProgress": "匯出學習進度",
   "page.ProgramProcessBlock.firstWatchedAt": "初次觀看時間",
-  "page.ProgramProcessBlock.instructorName": "講師名稱",
   "page.ProgramProcessBlock.lastUpdatedAtText": "計算累計到此日期的進度",
   "page.ProgramProcessBlock.lastWatchedAt": "最後觀看時間",
   "page.ProgramProcessBlock.learningDuration": "學習時數",
   "page.ProgramProcessBlock.learningProgress": "學習進度",
-  "page.ProgramProcessBlock.minutes": "分鐘數",
   "page.ProgramProcessBlock.practices": "作業",
   "page.ProgramProcessBlock.programContentDuration": "單元時長(分)",
   "page.ProgramProcessBlock.programContentType": "單元類型",
@@ -1642,7 +1723,39 @@
   "page.ProgramProcessBlock.watchedDuration": "學習時間(分)",
   "page.ProgramProcessBlock.watchedPercentage": "學習進度",
   "page.ProgramProgressCollectionAdminPage.programProgress": "學習進度",
-  "page.selectedProgramPackage": "指定課程組合",
+  "page.ProjectAdminPage.settings": "專案設定",
+  "page.ProjectFundingPage.projectTitle": "專案名稱",
+  "page.ProjectFundingPage.sponsor": "發起者",
+  "page.ProjectFundingPage.unnamedProject": "未命名專案",
+  "page.ProjectPreOrderPage.projectTitle": "專案名稱",
+  "page.ProjectPreOrderPage.sponsor": "發起者",
+  "page.ProjectPreOrderPage.unnamedProject": "未命名專案",
+  "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
+  "page.VoucherPlanCollectionBlock.edit": "編輯",
+  "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
+  "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
+  "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
+  "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
+  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
+  "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
+  "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
+  "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
+  "page.salesLeadDeliveryPage.deliverSalesLead": "派發名單",
+  "page.salesLeadDeliveryPage.deliverSuccessfully": "派發名單成功",
+  "page.salesLeadDeliveryPage.deliveredCount": "已派發 {count} 筆名單",
+  "page.salesLeadDeliveryPage.delivering": "派發名單中",
+  "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
+  "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
+  "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
+  "page.salesLeadDeliveryPage.field": "領域",
+  "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
+  "page.salesLeadDeliveryPage.nextStep": "下一步",
+  "page.salesLeadDeliveryPage.originalManager": "原承辦人",
+  "page.salesLeadDeliveryPage.salesLeadDelivery": "名單派發",
+  "page.salesLeadDeliveryPage.starRange": "星等",
+  "page.salesLeadDeliveryPage.starRangeIsNull": "沒有星等的人",
   "pageProgramProgressCollectionAdminPage.exerciseFailed": "未通過",
   "pageProgramProgressCollectionAdminPage.exercisePassed": "通過",
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "測驗狀態",
@@ -1728,6 +1841,11 @@
   "podcastAlbum.ui.sortPodcastProgram": "排序音頻",
   "practice.text.emptyPractice": "尚未有任何作業",
   "practice.text.searchPractice": "搜尋標題或學員名稱",
+  "program.DisplayModeSelector.conceal": "隱藏",
+  "program.DisplayModeSelector.loginToTrial": "登入試看",
+  "program.DisplayModeSelector.payToWatch": "付費觀看",
+  "program.DisplayModeSelector.trial": "試看",
+  "program.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "program.ProgramCollectionSelector.addItem": "新增項目",
   "program.ProgramCollectionSelector.choiceData": "選擇資料",
   "program.ProgramCollectionSelector.currentPrice": "依產品價錢",
@@ -1742,6 +1860,7 @@
   "program.ProgramCollectionSelector.sort": "排序方式",
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
+  "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "全部課程組合",
   "program.event.editIssueFailed": "無法更改問題",
   "program.label.allProgram": "全部課程",
@@ -1878,6 +1997,9 @@
   "program.ui.uploadVideo": "上傳影片",
   "program.ui.uploadedCaptions": "已上傳字幕",
   "programPackage.ProgramPackageBasicFrom.tag": "標籤",
+  "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
+  "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
+  "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
   "programPackage.label.availableForLimitTime": "可觀看 {amount} {unit}",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
@@ -1921,6 +2043,7 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "發起者",
   "project.*.unnamedProject": "未命名專案",
+  "project.ProjectAdminPage.projectIntroduction": "專案介紹",
   "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "交付項目",
   "project.ProjectPlanCard.notSale": "已停售",
@@ -2013,6 +2136,7 @@
   "promotion.ui.sendPoint": "發送點數",
   "promotion.ui.useNow": "立即使用",
   "sale.SaleCollectionAdminCard.cancel": "取消",
+  "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.equity": "權益",
   "sale.SaleCollectionAdminCard.open": "開通",
   "sale.SaleCollectionAdminCard.openEquity": "開通權益",
@@ -2065,6 +2189,30 @@
   "upload.event.uploading": "上傳中",
   "upload.label.retry": "重新上傳",
   "upload.label.uploadFile": "上傳檔案",
+  "voucher.*.cancel": "取消",
+  "voucher.*.confirm": "確定",
+  "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
+  "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
+  "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
+  "voucher.VoucherPlanAdminModal.endedAt": "結束時間",
+  "voucher.VoucherPlanAdminModal.errorExchangeItems": "至少選一個兌換項目",
+  "voucher.VoucherPlanAdminModal.errorExchangeItemsAmount": "數量至少為 1",
+  "voucher.VoucherPlanAdminModal.errorVoucherCodes": "至少一組兌換碼",
+  "voucher.VoucherPlanAdminModal.exchangeItems": "兌換項目",
+  "voucher.VoucherPlanAdminModal.exchangeItemsAmount": "兌換項目數量",
+  "voucher.VoucherPlanAdminModal.isSaleable": "可銷售（每份）",
+  "voucher.VoucherPlanAdminModal.isTransferable": "允許用戶自行轉贈",
+  "voucher.VoucherPlanAdminModal.optional": "非必填",
+  "voucher.VoucherPlanAdminModal.startedAt": "開始時間",
+  "voucher.VoucherPlanAdminModal.successfullyCreated": "建立成功",
+  "voucher.VoucherPlanAdminModal.successfullySaved": "儲存成功",
+  "voucher.VoucherPlanAdminModal.voucherCodes": "兌換碼",
+  "voucher.VoucherPlanAdminModal.voucherPlanTitle": "兌換方案名稱",
+  "voucher.VoucherPlanCard.exchangeItemsNumber": "可兌換 {number} 個項目",
+  "voucher.VoucherPlanCard.exchangedCount": "{exchanged}/{total} 張",
+  "voucher.VoucherPlanCard.forever": "無使用期限",
+  "voucher.VoucherPlanCard.fromNow": "即日起",
   "voucher.status.available": "可使用",
   "voucher.status.expired": "已失效",
   "voucher.status.redeemable": "可兌換",
