--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -231,6 +231,7 @@
   "admin.AdminMenu.blogPosts": "文章管理",
   "admin.AdminMenu.certificate": "证书管理",
   "admin.AdminMenu.certificateSetting": "证书设定",
+  "admin.AdminMenu.certificateTemplate": "證書模板",
   "admin.AdminMenu.coinHistory": "代币纪录",
   "admin.AdminMenu.couponPlans": "折价方案",
   "admin.AdminMenu.creatorDisplayAdmin": "讲师墙",
@@ -289,6 +290,7 @@
   "appointment.AppointmentPeriodCard.addToCalendar": "加入行事历",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "已于 {time} 取消预约",
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已预约你的「{title}」",
+  "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "进入会议",
   "appointment.event.appointmentFailed": "预约失败",
   "appointment.event.appointmentSuccessfully": "预约成功",
@@ -361,7 +363,7 @@
   "appointment.text.unpublishedNotation": "预约方案未发布，此方案并不会显示在页面上，学生也不能购买此方案。",
   "appointment.ui.addToCalendar": "加入行事历",
   "appointment.ui.appointmentIssueAndResult": "提问纪录单",
-"appointment.ui.appointmentText": "{name} 已预约你的「{title}」",
+  "appointment.ui.appointmentText": "{name} 已预约你的「{title}」",
   "appointment.ui.checkMemberPage": "查看学员主页",
   "appointment.ui.close": "关闭",
   "appointment.ui.createPeriod": "建立时段",
@@ -376,6 +378,9 @@
   "appointmentMessages.*.appointmentIssueAndResult": "提问纪录单",
   "appointmentMessages.*.detail": "详情",
   "appointmentMessages.*.fetchDataError": "读取错误",
+  "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
+  "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "订单更新日期",
@@ -428,6 +433,11 @@
   "code.E_SEND_EMAIL": "寄送信件失败",
   "code.E_USERNAME_EXISTS": "使用者名称已存在",
   "code.SUCCESS": "成功",
+  "common.MetaProductDeletionBlock.back": "back",
+  "common.MetaProductDeletionBlock.delete": "delete",
+  "common.MetaProductDeletionBlock.deleteConfirmation": "{metaProduct}一經刪除即不可恢復，確定要刪除嗎？",
+  "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
+  "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
   "common.event.failedSave": "储存失败",
   "common.event.failedUpload": "上传失败",
@@ -739,9 +749,12 @@
   "common.status.orderDeleted": "已删除",
   "common.status.orderExpired": "已失效",
   "common.status.orderFailed": "付款失败",
+  "common.status.orderPartialExpired": "部分過期",
   "common.status.orderPartialPaid": "部分付款",
   "common.status.orderPartialRefund": "部分退款",
+  "common.status.orderPaying": "付款中",
   "common.status.orderRefund": "已退款",
+  "common.status.orderRefunding": "退款中",
   "common.status.orderSuccess": "已完成",
   "common.status.orderUnpaid": "待付款",
   "common.status.outdated": "已过期",
@@ -752,6 +765,7 @@
   "common.status.published": "已发布",
   "common.status.selling": "贩售中",
   "common.status.soldOut": "已售完",
+  "common.status.unknown": "未知",
   "common.status.unpublished": "尚未发布",
   "common.status.visible": "显示",
   "common.text.cancelSubscriptionDate": "已于 {date} 取消订阅",
@@ -1046,10 +1060,19 @@
   "craft.SectionSettings.vertical": "垂直排列",
   "craft.SectionSettings.verticalAlign": "垂直对齐",
   "craft.SizeStyleInput.height": "高度",
+  "craft.SpaceStyleInput.bottom": "下",
+  "craft.SpaceStyleInput.left": "左",
+  "craft.SpaceStyleInput.margin": "外距",
+  "craft.SpaceStyleInput.padding": "内距",
+  "craft.SpaceStyleInput.right": "右",
+  "craft.SpaceStyleInput.spacing": "间距",
+  "craft.SpaceStyleInput.top": "上",
   "craft.TextStyledInput.margin": "外距",
   "craft.TitleSettings.titleContent": "标题内容",
   "craft.inputs.border.none": "无框线",
   "craft.inputs.border.solid": "实线",
+  "craft.inputs.margin": "外距",
+  "craft.inputs.padding": "內距",
   "craft.label.actionSetting": "行为设定",
   "craft.label.activity": "活动",
   "craft.label.activityBlock": "活动区块",
@@ -1148,13 +1171,6 @@
   "craft.settings.responsiveSelector.desktop": "桌面",
   "craft.settings.responsiveSelector.mobile": "手机",
   "craft.settings.responsiveSelector.tablet": "平板",
-  "craft.SpaceStyleInput.spacing": "间距",
-  "craft.SpaceStyleInput.margin": "外距",
-  "craft.SpaceStyleInput.padding": "内距",
-  "craft.SpaceStyleInput.top": "上",
-  "craft.SpaceStyleInput.right": "右",
-  "craft.SpaceStyleInput.bottom": "下",
-  "craft.SpaceStyleInput.left": "左",
   "craft.text.chooseCategories": "选择分类",
   "craft.text.chooseTags": "选择标签",
   "craft.text.deletePageConfirmation": "页面一经删除即不可恢复，确定要删除吗？",
@@ -1251,6 +1267,7 @@
   "form.PermissionGroup.CONTRACT_VALUE_VIEW_NORMAL": "检视自己建立的合约",
   "form.PermissionGroup.COUPON_CODE_EXPORT": "汇出折扣码",
   "form.PermissionGroup.COUPON_PLAN_ADMIN": "所有折价方案功能",
+  "form.PermissionGroup.COUPON_PLAN_NORMAL": "個人折價方案功能",
   "form.PermissionGroup.COUPON_PLAN_READ": "查看折价方案",
   "form.PermissionGroup.COUPON_PLAN_WRITE": "编写折价方案",
   "form.PermissionGroup.CRAFT_MENU_ADMIN": "页面模组选单",
@@ -1342,6 +1359,7 @@
   "form.PermissionGroup.VIEW_ALL_MEMBER_NOTE": "查看所有联络纪录",
   "form.PermissionGroup.VOUCHER_CODE_EXPORT": "汇出兑换码",
   "form.PermissionGroup.VOUCHER_PLAN_ADMIN": "所有兑换方案功能",
+  "form.PermissionGroup.VOUCHER_PLAN_NORMAL": "個人兌換方案功能",
   "form.PermissionGroup.VOUCHER_PLAN_READ": "查看兑换方案",
   "form.PermissionGroup.VOUCHER_PLAN_WRITE": "编写兑换方案",
   "form.PermissionInput.activity": "活动",
@@ -1366,6 +1384,15 @@
   "form.PermissionInput.salesManagement": "业务管理",
   "form.PermissionInput.task": "待办管理",
   "form.PermissionInput.voucher": "兑换方案",
+  "hooks.data.activity": "活動",
+  "hooks.data.certificate": "證書",
+  "hooks.data.merchandise": "商品",
+  "hooks.data.podcastAlbum": "專輯",
+  "hooks.data.podcastProgram": "廣播",
+  "hooks.data.post": "文章",
+  "hooks.data.program": "課程",
+  "hooks.data.programPackage": "課程組合",
+  "hooks.data.project": "專案",
   "member.label.abstract": "个人简介",
   "member.label.assign": "指派",
   "member.label.attachment": "通话附件",
@@ -1405,7 +1432,7 @@
   "member.label.task": "待办清单",
   "member.label.taskDescription": "内容",
   "member.label.taskTitle": "标题",
-  "member.label.线上课程服务约款": "线上课程服务约款",
+  "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "标注为拒绝",
   "member.text.memberSelect": "请输入帐号或 Email",
   "member.text.removeMember": "学员状态将改为已拒绝，并从「开发中」的名单内抽离。 ",
@@ -1589,50 +1616,105 @@
   "order.text.modifyOrderStatusDescription": "此操作仅更改状态显示并控制使用者权限，实际退款或金额异动请到金流平台操作。",
   "order.ui.modifyOrderStatus": "变更订单状态",
   "page.*.all": "全部",
+  "page.*.available": "可使用",
+  "page.*.basicSettings": "基本設定",
+  "page.*.cancel": "取消",
+  "page.*.certificateNumber": "證書編號",
+  "page.*.certificateSetting": "證書設定",
   "page.*.chooseMember": "选择会员",
+  "page.*.couponPlans": "折價方案",
+  "page.*.create": "建立",
+  "page.*.createCouponPlan": "建立折價方案",
+  "page.*.createVoucherPlan": "建立兌換方案",
   "page.*.date": "日期",
+  "page.*.day": "日",
+  "page.*.deleteProductDanger": "*已購買者在刪除後仍可觀看。",
+  "page.*.deliveryDate": "發送日",
   "page.*.edit": "编辑",
+  "page.*.editCouponPlan": "編輯折價方案",
+  "page.*.eligibilityList": "資格名單",
   "page.*.enrolledMember": "拥有权益的会员",
+  "page.*.expiryDate": "到期日",
   "page.*.fetchDataError": "读取错误",
+  "page.*.hasExpirationDate": "有效期",
+  "page.*.hour": "小時",
+  "page.*.import": "匯入",
   "page.*.member": "会员",
   "page.*.memberEmail": "Email",
   "page.*.memberName": "姓名",
+  "page.*.month": "月",
+  "page.*.noExpirationDate": "無效期",
+  "page.*.notYet": "未啟用",
+  "page.*.preview": "預覽",
   "page.*.program": "课程",
   "page.*.programContentSectionTitle": "章节名称",
   "page.*.programContentTitle": "单元名称",
   "page.*.programPackage": "课程组合",
   "page.*.programTitle": "课程名称",
   "page.*.property": "自订栏位",
+  "page.*.publishSettings": "發佈設定",
+  "page.*.published": "已發佈",
+  "page.*.reset": "重置",
+  "page.*.save": "儲存",
+  "page.*.search": "查詢",
   "page.*.selectedCategory": "指定分类",
   "page.*.selectedMember": "指定会员",
   "page.*.showMore": "显示更多",
+  "page.*.successfullySaved": "儲存成功",
+  "page.*.title": "名稱",
+  "page.*.unavailable": "已失效",
+  "page.*.unpublished": "尚未發佈",
+  "page.*.upload": "上傳",
+  "page.*.voucherPlans": "兌換方案",
+  "page.*.week": "週",
+  "page.*.year": "年",
   "page.AppointmentPeriodCollectionAdminPage.allInstructors": "全部老师",
   "page.AppointmentPeriodCollectionAdminPage.dateRangeWarning": "请选择时间区间一个月以内",
   "page.AppointmentPeriodCollectionAdminPage.emptyAppointment": "目前还没有任何预约",
+  "page.CertificateAdminPage.certificateIntro": "證書介紹",
+  "page.CertificateAdminPage.deleteCertificateDangerText": "*已收到證書在刪除後仍可觀看。",
+  "page.CertificateBasicForm.CertificateCollectionTable": "證書樣板",
+  "page.CertificateBasicForm.certificateTemplateIsRequired": "Please select a template.",
+  "page.CertificateBasicForm.certificateTitle": "證書名稱",
+  "page.CertificateBasicForm.expirationDate": "證書效期",
+  "page.CertificateBasicForm.qualification": "學習時數",
+  "page.CertificateCollectionPage.createCertificate": "新增證書",
+  "page.CertificateEligibilityListBlock.Permanent": "永久有效",
+  "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
+  "page.CertificateEligibilityListBlock.revoke": "撤銷",
+  "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
+  "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
+  "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
+  "page.CertificatePublishAdminBlock.unPublishedCertificateText": "你的證書未發佈，此證書並不會顯示在前台。",
+  "page.CertificateSelector.selectTemplate": "select template",
+  "page.CouponCollectionBlock.emptyCouponPlan": "無任何折價方案",
+  "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部课程组合",
+  "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "选择课程组合分类",
+  "page.ProgramPackageProcessBlock.instructorName": "講師名稱",
+  "page.ProgramPackageProcessBlock.minutes": "分鐘數",
   "page.ProgramPackageProcessBlock.programPackageCategories": "课程组合分类",
   "page.ProgramPackageProcessBlock.programPackageTitle": "课程组合名称",
   "page.ProgramPackageProcessBlock.rangePickText": "计算此日期区间的学习状况",
   "page.ProgramPackageProcessBlock.selectedPackageCategory": "指定组合分类",
+  "page.ProgramPackageProcessBlock.selectedProgramPackage": "指定課程組合",
   "page.ProgramProcessBlock.allMembers": "全部会员",
   "page.ProgramProcessBlock.allPrograms": "全部课程",
   "page.ProgramProcessBlock.categories": "课程分类",
   "page.ProgramProcessBlock.chooseProgram": "选择课程",
   "page.ProgramProcessBlock.chooseProgramCategory": "选择课程分类",
-  "page.ProgramProcessBlock.chooseProgramPackage": "选择课程",
   "page.ProgramProcessBlock.chooseProperty": "选择栏位",
   "page.ProgramProcessBlock.containKeyword": "关键字包含",
   "page.ProgramProcessBlock.exercisePassedAt": "测验通过时间",
   "page.ProgramProcessBlock.exerciseScores": "测验分数",
   "page.ProgramProcessBlock.exportProgramProgress": "汇出学习进度",
   "page.ProgramProcessBlock.firstWatchedAt": "初次观看时间",
-  "page.ProgramProcessBlock.instructorName": "讲师名称",
   "page.ProgramProcessBlock.lastUpdatedAtText": "计算累计到此日期的进度",
   "page.ProgramProcessBlock.lastWatchedAt": "最后观看时间",
   "page.ProgramProcessBlock.learningDuration": "学习时数",
   "page.ProgramProcessBlock.learningProgress": "学习进度",
-  "page.ProgramProcessBlock.minutes": "分钟数",
   "page.ProgramProcessBlock.practices": "作业",
   "page.ProgramProcessBlock.programContentDuration": "单元时长(分)",
   "page.ProgramProcessBlock.programContentType": "单元类型",
@@ -1641,7 +1723,39 @@
   "page.ProgramProcessBlock.watchedDuration": "学习时间(分)",
   "page.ProgramProcessBlock.watchedPercentage": "学习进度",
   "page.ProgramProgressCollectionAdminPage.programProgress": "学习进度",
-  "page.selectedProgramPackage": "指定课程组合",
+  "page.ProjectAdminPage.settings": "專案設定",
+  "page.ProjectFundingPage.projectTitle": "專案名稱",
+  "page.ProjectFundingPage.sponsor": "發起者",
+  "page.ProjectFundingPage.unnamedProject": "未命名專案",
+  "page.ProjectPreOrderPage.projectTitle": "專案名稱",
+  "page.ProjectPreOrderPage.sponsor": "發起者",
+  "page.ProjectPreOrderPage.unnamedProject": "未命名專案",
+  "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
+  "page.VoucherPlanCollectionBlock.edit": "編輯",
+  "page.VoucherPlanCollectionBlock.emptyVoucherPlan": "無任何兌換方案",
+  "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
+  "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
+  "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
+  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
+  "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
+  "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
+  "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
+  "page.salesLeadDeliveryPage.deliverSalesLead": "派發名單",
+  "page.salesLeadDeliveryPage.deliverSuccessfully": "派發名單成功",
+  "page.salesLeadDeliveryPage.deliveredCount": "已派發 {count} 筆名單",
+  "page.salesLeadDeliveryPage.delivering": "派發名單中",
+  "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
+  "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
+  "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
+  "page.salesLeadDeliveryPage.field": "領域",
+  "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
+  "page.salesLeadDeliveryPage.nextStep": "下一步",
+  "page.salesLeadDeliveryPage.originalManager": "原承辦人",
+  "page.salesLeadDeliveryPage.salesLeadDelivery": "名單派發",
+  "page.salesLeadDeliveryPage.starRange": "星等",
+  "page.salesLeadDeliveryPage.starRangeIsNull": "沒有星等的人",
   "pageProgramProgressCollectionAdminPage.exerciseFailed": "未通过",
   "pageProgramProgressCollectionAdminPage.exercisePassed": "通过",
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "测验状态",
@@ -1727,6 +1841,11 @@
   "podcastAlbum.ui.sortPodcastProgram": "排序音频",
   "practice.text.emptyPractice": "尚未有任何作业",
   "practice.text.searchPractice": "搜寻标题或学员名称",
+  "program.DisplayModeSelector.conceal": "隱藏",
+  "program.DisplayModeSelector.loginToTrial": "登入試看",
+  "program.DisplayModeSelector.payToWatch": "付費觀看",
+  "program.DisplayModeSelector.trial": "試看",
+  "program.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "program.ProgramCollectionSelector.addItem": "新增项目",
   "program.ProgramCollectionSelector.choiceData": "选择资料",
   "program.ProgramCollectionSelector.currentPrice": "依产品价钱",
@@ -1741,6 +1860,7 @@
   "program.ProgramCollectionSelector.sort": "排序方式",
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
+  "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramPackageSelector.allProgramPackage": "全部课程组合",
   "program.event.editIssueFailed": "无法更改问题",
   "program.label.allProgram": "全部课程",
@@ -1877,6 +1997,9 @@
   "program.ui.uploadVideo": "上传影片",
   "program.ui.uploadedCaptions": "已上传字幕",
   "programPackage.ProgramPackageBasicFrom.tag": "标签",
+  "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
+  "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
+  "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
   "programPackage.label.availableForLimitTime": "可观看 {amount} {unit}",
   "programPackage.label.delete": "删除课程组合",
   "programPackage.label.generalSetting": "一般设定",
@@ -1920,6 +2043,7 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "发起者",
   "project.*.unnamedProject": "未命名专案",
+  "project.ProjectAdminPage.projectIntroduction": "專案介紹",
   "project.ProjectBasicForm.tag": "标签",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
   "project.ProjectPlanCard.notSale": "已停售",
@@ -2012,6 +2136,7 @@
   "promotion.ui.sendPoint": "发送点数",
   "promotion.ui.useNow": "立即使用",
   "sale.SaleCollectionAdminCard.cancel": "取消",
+  "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.equity": "权益",
   "sale.SaleCollectionAdminCard.open": "开通",
   "sale.SaleCollectionAdminCard.openEquity": "开通权益",
@@ -2064,6 +2189,30 @@
   "upload.event.uploading": "上传中",
   "upload.label.retry": "重新上传",
   "upload.label.uploadFile": "上传档案",
+  "voucher.*.cancel": "取消",
+  "voucher.*.confirm": "確定",
+  "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
+  "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
+  "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
+  "voucher.VoucherPlanAdminModal.endedAt": "結束時間",
+  "voucher.VoucherPlanAdminModal.errorExchangeItems": "至少選一個兌換項目",
+  "voucher.VoucherPlanAdminModal.errorExchangeItemsAmount": "數量至少為 1",
+  "voucher.VoucherPlanAdminModal.errorVoucherCodes": "至少一組兌換碼",
+  "voucher.VoucherPlanAdminModal.exchangeItems": "兌換項目",
+  "voucher.VoucherPlanAdminModal.exchangeItemsAmount": "兌換項目數量",
+  "voucher.VoucherPlanAdminModal.isSaleable": "可銷售（每份）",
+  "voucher.VoucherPlanAdminModal.isTransferable": "允許用戶自行轉贈",
+  "voucher.VoucherPlanAdminModal.optional": "非必填",
+  "voucher.VoucherPlanAdminModal.startedAt": "開始時間",
+  "voucher.VoucherPlanAdminModal.successfullyCreated": "建立成功",
+  "voucher.VoucherPlanAdminModal.successfullySaved": "儲存成功",
+  "voucher.VoucherPlanAdminModal.voucherCodes": "兌換碼",
+  "voucher.VoucherPlanAdminModal.voucherPlanTitle": "兌換方案名稱",
+  "voucher.VoucherPlanCard.exchangeItemsNumber": "可兌換 {number} 個項目",
+  "voucher.VoucherPlanCard.exchangedCount": "{exchanged}/{total} 張",
+  "voucher.VoucherPlanCard.forever": "無使用期限",
+  "voucher.VoucherPlanCard.fromNow": "即日起",
   "voucher.status.available": "可使用",
   "voucher.status.expired": "已失效",
   "voucher.status.redeemable": "可兑换",
